# TypedCygni

./: .gitignore  README.md
Cygni/: .Compiler.cpp.swp  .clang-format  ByteCodeGenerator.cpp  ByteCodeGenerator.h  CMakeCache.txt  CMakeLists.txt  Compiler.cpp  Compiler.h  Cygni  Cygni.kdev4  Cygni.pro  DebugInfo.cpp  DebugInfo.h  DefinitionCollector.cpp  DefinitionCollector.h  Exception.cpp  Exception.h  Expression.cpp  Expression.h  ExpressionKind.cpp  ExpressionKind.h  Function.cpp  Function.h  Lexer.cpp  Lexer.h  Location.cpp  Location.h  Makefile  OpCode.cpp  OpCode.h  Parser.cpp  Parser.h  Scope.cpp  Scope.h  StringBuilder.cpp  StringBuilder.h  Test.cpp  Test.h  Token.cpp  Token.h  (+17 more)
Cygni/.kdev4/: Cygni.kdev4
Cygni/TestCases/: .example1.txt.swp  .multiplication.txt.swp  factorial.txt  if_test.txt
Cygni/docs/experiments/: test2.cyg
Cygni/include/: Compiler.hpp  ConsoleApp.hpp  Constants.hpp  Enum.hpp  Exception.hpp  Expression.hpp  Lexer.hpp  Location.hpp  Nanopass.hpp  Parser.hpp  PreDef.hpp  Scope.hpp  SourceLocation.hpp  SourcePosition.hpp  Token.hpp  Type.hpp  TypeChecker.hpp  Utility.hpp  Visitor.hpp  catch.hpp
Cygni/src/: Compiler.cpp  ConsoleApp.cpp  Expression.cpp  Lexer.cpp  Location.cpp  Nanopass.cpp  Parser.cpp  Scope.cpp  SourceLocation.cpp  SourcePosition.cpp  Token.cpp  Type.cpp  TypeChecker.cpp  Utility.cpp  Visitor.cpp
Cygni/src/headers/: Constants.hpp  Enum.hpp  Exception.hpp  Expression.hpp  Lexer.hpp  Parser.hpp  Scope.hpp  Token.hpp  Type.hpp  Utility.hpp  (+1 more)
Cygni/test/: CMakeLists.txt  test.cpp
CygniCompiler/: Any.hpp  Ast.cpp  Ast.hpp  CMakeLists.txt  Compiler.hpp  Encoding.cpp  Endian.hpp  Exception.hpp  File.cpp  File.hpp  Lexer.cpp  Lexer.hpp  Location.cpp  Location.hpp  Locator.cpp  Locator.hpp  Optional.hpp  Parser.cpp  Parser.hpp  Predef.cpp  Predef.hpp  Scope.cpp  Scope.hpp  String.hpp  Token.cpp  Token.hpp  Type.cpp  Type.hpp  TypeChecker.hpp  main.cpp
CygniCompiler/test/: JSON.cpp  JSON.hpp  TestCompiler.cpp  TestCompiler.hpp  TestEndian.cpp  TestEndian.hpp  TestLexer.cpp  TestLexer.hpp  TestLocator.cpp  TestLocator.hpp  TestParser.cpp  TestParser.hpp  TestString.hpp  TestTypeChecker.cpp  TestTypeChecker.hpp
VirtualMachine/: CMakeLists.txt  main.c  main.cpp
VirtualMachine/include/: Data.h  Data.hpp  Library.h  Machine.h  Machine.hpp  Memory.h  OpCode.h  OpCode.hpp  Parser.h  Structures.hpp  Unicode.h  Utility.hpp  cygni.h  executable.h  loader.h  state.h  uthash.h
VirtualMachine/src/: Library.c  Machine.c  Machine.cpp  Memory.c  OpCode.c  Parser.c  Parser.cpp  Unicode.c  Utility.cpp  loader.c  state.c
(+423 files in other folders)
